--- a/Trial/style.css
+++ b/Trial/style.css
@@ -1,62 +1,168 @@
-/* From Uiverse.io by javierBarroso */ 
-.parent {
+/* ========== Global Styles =========== */
+:root {
+  --primary-color: #f94a3d;
+  --yellow-color: #ffcf03;
+  --black-color: #212244;
+  --default-color: #69697b;
+  --deep-yellow: #ff9401;
+  --yellow-color-1: #ffe507;
+  --red-color-1: #e83b2e;
+  --red-color-2: #ee3e32;
+  --light-red-color: #fdecec;
+  --grey-color: #eaeaea;
+  --grey-color-1: #f8f8f8;
+  --white-color: #fff;
+  --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+/* ========== APP SECTION =========== */
+.app {
+  padding: 10rem 5% 20rem;
+  border: 2px solid red;
+  width: 90%;
+  margin: auto;
+}
+
+/* ROW: Flexbox for better alignment */
+.app .row-2 {
+  background-color: var(--primary-color);
+  border-radius: 2rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5rem;
+  flex-wrap: wrap;
+}
+
+/* LEFT COLUMN (Image & Circle) */
+.app .row-2 .col-2:first-child {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app .row-2 .col-2:first-child .circle {
+  border-radius: 50%;
+  height: 40rem;
+  width: 40rem;
+  border: 3rem solid var(--red-color-1);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app .row-2 .col-2:first-child .circle .inner-circle {
+  border-radius: 50%;
+  height: 26rem;
+  width: 26rem;
+  border: 7rem solid var(--red-color-2);
+}
+
+.app .row-2 .col-2:first-child .circle img {
+  position: absolute;
+  top: 60%;
+  left: 52%;
+  transform: translate(-50%, -50%);
+  width: 33rem;
+}
+
+/* RIGHT COLUMN (Text & Buttons) */
+.app .row-2 .col-2:last-child {
+  flex: 1;
+  max-width: 500px;
+  text-align: left;
+}
+
+.app .row-2 .col-2:last-child h2 {
+  color: var(--white-color);
+  font-size: 3.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.app .row-2 .col-2:last-child p {
+  color: var(--white-color);
+  margin-bottom: 2rem;
+}
+
+.app .row-2 .col-2:last-child .d-flex {
+  display: flex;
+  gap: 2rem;
+}
+
+.app .row-2 .col-2:last-child .d-flex img {
+  width: 150px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.app .row-2 .col-2:last-child .d-flex img:hover {
+  transform: scale(1.1);
+}
+
+/* ========== RESPONSIVENESS ========== */
+@media (max-width: 1200px) {
+  .app .row-2 {
+    padding: 3rem;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .app .row-2 .col-2:first-child .circle {
+    height: 30rem;
+    width: 30rem;
+  }
+
+  .app .row-2 .col-2:first-child .circle img {
+    width: 25rem;
+  }
+
+  .app .row-2 .col-2:last-child h2 {
+    font-size: 3rem;
+  }
+  .inner-circle{
+    border: 4rem solid red;
+  }
+}
+
+@media (max-width: 996px) {
+  .app {
+    padding: 10rem 5% 10rem;
+    height: auto;
+  }
+
+  .app .row-2 .col-2:first-child {
+    display: none;
+  }
+
+  .app .row-2 .col-2:last-child {
     width: 100%;
-    height: 100%;
-    display: flex;
+    text-align: center;
+  }
+
+  .app .row-2 .col-2:last-child h2 {
+    font-size: 3rem;
+  }
+
+  .app .row-2 .col-2:last-child .d-flex {
     justify-content: center;
-    align-items: center;
   }
-  
-  .child {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform-style: preserve-3d;
-    transition: all 0.3s cubic-bezier(0.68, 0.85, 0.265, 1.85);
-    border-radius: 5px;
-    margin: 0 5px;
-    box-shadow:
-      inset 1px 1px 2px #fff,
-      0 0 5px #4442;
+  .inner-circle{
+    border: 4rem solid red;
   }
-  
-  .child:hover {
-    background-color: white;
-    background-position:
-      -100px 100px,
-      -100px 100px;
-    /*transform: rotate3d(0.5, 1, 0, 30deg);*/
-    transform: perspective(180px) rotateX(60deg) translateY(2px);
+}
+
+@media (max-width: 567px) {
+  .app .row-2 .col-2:last-child h2 {
+    font-size: 2.5rem;
   }
-  
-  .child-1:hover {
-    box-shadow: 0px 10px 10px #1e90ff;
+
+  .app .row-2 .col-2:last-child .d-flex img {
+    width: 120px;
   }
-  .child-2:hover {
-    box-shadow: 0px 10px 10px #ff00ff;
+  .inner-circle{
+    border: 4rem solid red;
   }
-  .child-3:hover {
-    box-shadow: 0px 10px 10px #000;
-  }
-  .child-4:hover {
-    box-shadow: 0px 10px 10px #4267b2;
-  }
-  
-  .button {
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: transparent;
-    font-size: 20px;
-    transition-duration: 0.5s;
-    transition-timing-function: cubic-bezier(0.68, -0.85, 0.265, 1.55);
-  }
-  
-  .child:hover > .button {
-    transform: translate3d(0px, 20px, 30px) perspective(80px) rotateX(-60deg)
-      translateY(2px) translateZ(10px);
-  }
-  
+}
