--- a/Trial/style.css
+++ b/Trial/style.css
@@ -1,168 +1,29 @@
-/* ========== Global Styles =========== */
-:root {
-  --primary-color: #f94a3d;
-  --yellow-color: #ffcf03;
-  --black-color: #212244;
-  --default-color: #69697b;
-  --deep-yellow: #ff9401;
-  --yellow-color-1: #ffe507;
-  --red-color-1: #e83b2e;
-  --red-color-2: #ee3e32;
-  --light-red-color: #fdecec;
-  --grey-color: #eaeaea;
-  --grey-color-1: #f8f8f8;
-  --white-color: #fff;
-  --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-/* ========== APP SECTION =========== */
-.app {
-  padding: 10rem 5% 20rem;
-  border: 2px solid red;
-  width: 90%;
-  margin: auto;
-}
-
-/* ROW: Flexbox for better alignment */
-.app .row-2 {
-  background-color: var(--primary-color);
-  border-radius: 2rem;
+.password-field {
   position: relative;
+  width: 300px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 5rem;
-  flex-wrap: wrap;
 }
 
-/* LEFT COLUMN (Image & Circle) */
-.app .row-2 .col-2:first-child {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.password-field input {
+  width: 100%;
+  padding: 10px;
+  padding-right: 40px; /* Space for the button */
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
-.app .row-2 .col-2:first-child .circle {
-  border-radius: 50%;
-  height: 40rem;
-  width: 40rem;
-  border: 3rem solid var(--red-color-1);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.app .row-2 .col-2:first-child .circle .inner-circle {
-  border-radius: 50%;
-  height: 26rem;
-  width: 26rem;
-  border: 7rem solid var(--red-color-2);
-}
-
-.app .row-2 .col-2:first-child .circle img {
+.eye-btn {
   position: absolute;
-  top: 60%;
-  left: 52%;
-  transform: translate(-50%, -50%);
-  width: 33rem;
-}
-
-/* RIGHT COLUMN (Text & Buttons) */
-.app .row-2 .col-2:last-child {
-  flex: 1;
-  max-width: 500px;
-  text-align: left;
-}
-
-.app .row-2 .col-2:last-child h2 {
-  color: var(--white-color);
-  font-size: 3.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.app .row-2 .col-2:last-child p {
-  color: var(--white-color);
-  margin-bottom: 2rem;
-}
-
-.app .row-2 .col-2:last-child .d-flex {
-  display: flex;
-  gap: 2rem;
-}
-
-.app .row-2 .col-2:last-child .d-flex img {
-  width: 150px;
+  right: 10px;
+  background: none;
+  border: none;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+  font-size: 18px;
+  color: #666;
 }
 
-.app .row-2 .col-2:last-child .d-flex img:hover {
-  transform: scale(1.1);
-}
-
-/* ========== RESPONSIVENESS ========== */
-@media (max-width: 1200px) {
-  .app .row-2 {
-    padding: 3rem;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .app .row-2 .col-2:first-child .circle {
-    height: 30rem;
-    width: 30rem;
-  }
-
-  .app .row-2 .col-2:first-child .circle img {
-    width: 25rem;
-  }
-
-  .app .row-2 .col-2:last-child h2 {
-    font-size: 3rem;
-  }
-  .inner-circle{
-    border: 4rem solid red;
-  }
-}
-
-@media (max-width: 996px) {
-  .app {
-    padding: 10rem 5% 10rem;
-    height: auto;
-  }
-
-  .app .row-2 .col-2:first-child {
-    display: none;
-  }
-
-  .app .row-2 .col-2:last-child {
-    width: 100%;
-    text-align: center;
-  }
-
-  .app .row-2 .col-2:last-child h2 {
-    font-size: 3rem;
-  }
-
-  .app .row-2 .col-2:last-child .d-flex {
-    justify-content: center;
-  }
-  .inner-circle{
-    border: 4rem solid red;
-  }
-}
-
-@media (max-width: 567px) {
-  .app .row-2 .col-2:last-child h2 {
-    font-size: 2.5rem;
-  }
-
-  .app .row-2 .col-2:last-child .d-flex img {
-    width: 120px;
-  }
-  .inner-circle{
-    border: 4rem solid red;
-  }
+.eye-btn:hover {
+  color: #000;
 }
