--- a/frontend/src/assets/css/global_style.css
+++ b/frontend/src/assets/css/global_style.css
@@ -33,7 +33,8 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
-    background: #27ae60;
+    /* background: #27ae60; */
+    background: gray;
     border-radius: 5rem;
 }
 
